--- a/templates/front.html
+++ b/templates/front.html
@@ -1,5 +1,5 @@
 {% extends "frame.html" %}
 {% block content %}
-<h2>{{title}}</h2>
-<div>Hello!</div>
+<h2>Main Page</h2>
+<p>Hello! This is a wiki project created for the Udacity Web Development course.</p>
 {% endblock %}
