--- a/templates/login.html
+++ b/templates/login.html
@@ -24,5 +24,6 @@
     </tr>
   </table>
   <input type="submit">
+  <div class='signup'><a href="/signup">Not a User? signup here!</a></div>
 </form>
 {% endblock %}
